import org.apache.commons.io.FileUtils

import java.text.SimpleDateFormat

plugins {
    id 'java'
    id 'org.jetbrains.intellij'
    id 'org.jetbrains.kotlin.jvm'
}

test {
    minHeapSize = "512m" // initial heap size
    maxHeapSize = "4096m" // maximum heap size
    jvmArgs '-XX:MaxPermSize=152m' // mem argument for the test JVM
}

group 'com.sickworm.intellij'

version pluginVersion

// record compile time
def compileTime = System.currentTimeMillis()
def compileDate = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date())
new File("$rootDir/idea/src/main/resources/META-INF").mkdirs()
new File("$rootDir/idea/src/main/resources/META-INF/JUGG_PLUGIN_INFO.MF")
        .write("""Version: $version
Compile-Date: $compileDate
Compile-Timestamp: $compileTime
""")

tasks.findByName("buildPlugin").doFirst {
    // clean older distribution
    new File("$rootDir/idea/build/distributions").deleteDir()
    new File("$rootDir/idea/build/distributions").mkdirs()
}

sourceCompatibility = 11
targetCompatibility = 11

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}

intellij {
    pluginName = 'jugg'
    updateSinceUntilBuild = false
    version = ide_version
    plugins = ['android']
}

sourceSets {
    main {
        java {
            srcDirs += 'src/ide_entry/java'
        }
        resources {
            srcDirs += 'src/ide_entry/resources'
        }
    }
}

patchPluginXml.changeNotes = new File("${rootProject.rootDir}/change_log/change_log.html").getText('UTF-8')
FileUtils.copyDirectory(file("${rootProject.rootDir}/change_log") , file("src/main/resources/change_log"))

runIde {
    // default 11_0_11b1341.57 and will get Access Denied
//    jbrVersion = '11_0_4b520.11'
//    ideDirectory '/Applications/Android Studio.app/Contents'
    jbrVersion = '17b106.1'
    jvmArgs = ['-Xmx8G']
}

buildSearchableOptions {
    // default 11_0_11b1341.57 and will get Access Denied
//    jbrVersion = '11_0_4b520.11'
    jbrVersion = '17b106.1'
    enabled = false
}

repositories {
    google()
    mavenCentral()

    flatDir {
        dirs '../main/libs'
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    // for Kotlin
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation "org.jetbrains.kotlin:kotlin-reflect"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"

    implementation project(':main')
    implementation project(':deploy_compat:interface')
    implementation project(':deploy_compat:v_chipmunk')
    implementation project(':deploy_compat:v_giraffe')
    implementation project(':deploy_compat:v_hedgehog')
    implementation project(':deploy_compat:v_iguana')
    implementation project(':deploy_compat:v_meerkat')
    implementation project(':deploy_compat:v_narwhal')
    implementation project(':deploy_compat:v_narwhal_feature')

    // backend
    implementation "com.squareup.okhttp3:okhttp:4.9.1"

    testImplementation fileTree(dir: '../main/libs', include: ['*.jar'])
    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:5.4.0"
    testImplementation "org.mockito:mockito-inline:5.2.0"
    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.23"
    testImplementation "org.json:json:20230618"

    // uncomment it when we need to debug apt
//    compileOnly 'com.alibaba:arouter-compiler:1.5.2'

    // uncomment it when we need to debug ksp 1.7.21
//    compileOnly "com.google.devtools.ksp:symbol-processing-api:1.7.21-1.0.8"
//    compileOnly "com.google.devtools.ksp:symbol-processing:1.7.21-1.0.8"
//    compileOnly 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'

    // uncomment it when we need to debug ksp 2.0.21
//    compileOnly "com.google.devtools.ksp:symbol-processing-api:2.0.21-1.0.27"
//    compileOnly "com.google.devtools.ksp:symbol-processing:2.0.21-1.0.27"
//    compileOnly fileTree(include: ['jetified-core-ksp-jvm-2.4.0-2.0.21.jar'], dir: "${System.getProperty("user.home")}/.gradle/caches/8.9/transforms/1e293b78b8d2d971f356ac2d72f7f24a/transformed/")
}
